# Agora3D

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: git-submodules.cmake
graphics/: CMakeLists.txt  glfw_wrapper.cpp  glfw_wrapper.h  test.cpp
graphics/window_manager/: CMakeLists.txt  WindowManager.h
graphics/window_manager/sfml-window-manager/: CMakeLists.txt  SfmlWindowManager.cpp  SfmlWindowManager.h
logger/: CMakeLists.txt  logger.cpp  logger.h
